--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Mira la consola</h1>
 
     <script>
-      var socket = io.connect("ws://54.152.80.92:3000/", {
+      var socket = io.connect("http://localhost:3000", {
         forceNew: true
       })
       
