--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
-  <head>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
-  </head>
 
-  <body>
+<head>
+    <script src="/socket.io/socket.io.js"></script>
+</head>
+
+<body>
     <h1>Mira la consola</h1>
 
     <script>
-      var socket = io.connect("http://localhost:3000", {
-        forceNew: true
-      })
-      
-      socket.on('message', function (data) {
-        console.log(data)
-      })
+        var socket = io.connect("http://localhost:3000", {
+            forceNew: true
+        })
+
+        socket.on('message', function(data) {
+            console.log(data)
+        })
     </script>
-  </body>
+</body>
+
 </html>
